"sales , draft and payment related improvement"